--- a/delivery comida.ipynb
+++ b/delivery comida.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -244,6 +244,57 @@
    "metadata": {},
    "source": [
     "#\"Análisis de Costos y Rentabilidad\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Para el análisis de costos, consideraremos los siguientes costos asociados con cada pedido:\n",
+    "\n",
+    "Tarifa de Entrega: La tarifa cobrada por entregar el pedido.\n",
+    "Tarifa de Procesamiento de Pagos: La tarifa por procesar el pago.\n",
+    "Monto del Descuento: El descuento proporcionado en el pedido.\n",
+    "Calcularemos el costo total para la plataforma por pedido y luego agregaremos estos datos para comprender la estructura de costos en general.\n",
+    "\n",
+    "Los ingresos para la plataforma se derivan principalmente de la Tarifa de Comisión. Calcularemos la ganancia neta restando los costos totales (incluidos los descuentos) de los ingresos generados a través de las tarifas de comisión."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Total Orders': 1000, 'Total Revenue': 126990, 'Total Costs': 232709.85, 'Total Profit': -105719.85}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#calculo de rentabilidad por pedido\n",
+    "\n",
+    "pedidos_comida['Total Costs']=pedidos_comida['Delivery Fee']+ pedidos_comida['Payment Processing Fee']+pedidos_comida['discount amount']\n",
+    "pedidos_comida['Revenue']=pedidos_comida['Commission Fee']\n",
+    "pedidos_comida['Profit']=pedidos_comida['Revenue']-pedidos_comida['total costs']\n",
+    "\n",
+    "# agrgar datos para obtener metricas generales\n",
+    "\n",
+    "total_orders = pedidos_comida.shape[0]\n",
+    "total_revenue = pedidos_comida['Revenue'].sum()\n",
+    "total_costs = pedidos_comida['Total Costs'].sum()\n",
+    "total_profit = pedidos_comida['Profit'].sum()\n",
+    "\n",
+    "overall_metrics = {\n",
+    "    \"Total Orders\": total_orders,\n",
+    "    \"Total Revenue\": total_revenue,\n",
+    "    \"Total Costs\": total_costs,\n",
+    "    \"Total Profit\": total_profit\n",
+    "}\n",
+    "\n",
+    "print(overall_metrics)\n"
    ]
   }
  ],
