funciones antes de .loc

--- a/delivery comida.ipynb
+++ b/delivery comida.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -420,15 +420,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#nueva estrategia para rentabilidad"
+    "#nueva estrategia para rentabilidad\n",
+    "\n",
+    "Del análisis realizado hasta ahora, entendemos que los descuentos en pedidos de comida están resultando en enormes pérdidas. Ahora necesitamos encontrar una nueva estrategia para la rentabilidad. Necesitamos hallar un punto óptimo para ofrecer descuentos y cobrar comisiones. Para encontrar ese punto óptimo para los porcentajes de comisión y descuento, podemos analizar más profundamente las características de los pedidos rentables. Específicamente, necesitamos buscar:\n",
+    "\n",
+    "-Un nuevo porcentaje promedio de comisión basado en pedidos rentables.\n",
+    "-Un nuevo porcentaje promedio de descuento para pedidos rentables, que podría servir como guía para qué nivel de descuento aún permite la rentabilidad.\n",
+    "\n",
+    "Dado estos nuevos promedios, podemos sugerir ajustes que no solo hagan rentables los pedidos individuales, sino que también se apliquen ampliamente a todos los pedidos para mejorar la rentabilidad general. Vamos a calcular:\n",
+    "\n",
+    "-El porcentaje promedio de comisión para pedidos rentables.\n",
+    "-El porcentaje promedio de descuento para pedidos rentables.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.508436145149435 5.867469879518072\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/n4/hklslsrn5t91cccgjf28xl2c0000gn/T/ipykernel_2311/3726024104.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  profitable_orders['Commission Percentage'] = (profitable_orders['Commission Fee'] / profitable_orders['Order Value']) * 100\n",
+      "/var/folders/n4/hklslsrn5t91cccgjf28xl2c0000gn/T/ipykernel_2311/3726024104.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  profitable_orders['Effective Discount Percentage'] = (profitable_orders['discount amount'] / profitable_orders['Order Value']) * 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# filter the dataset for profitable orders\n",
+    "profitable_orders = pedidos_comida[pedidos_comida['Profit'] > 0]\n",
+    "\n",
+    "# calculate the average commission percentage for profitable orders\n",
+    "profitable_orders['Commission Percentage'] = (profitable_orders['Commission Fee'] / profitable_orders['Order Value']) * 100\n",
+    "\n",
+    "# calculate the average discount percentage for profitable orders\n",
+    "profitable_orders['Effective Discount Percentage'] = (profitable_orders['discount amount'] / profitable_orders['Order Value']) * 100\n",
+    "\n",
+    "# calculate the new averages\n",
+    "new_avg_commission_percentage = profitable_orders['Commission Percentage'].mean()\n",
+    "new_avg_discount_percentage = profitable_orders['Effective Discount Percentage'].mean()\n",
+    "\n",
+    "print(new_avg_commission_percentage, new_avg_discount_percentage)"
+   ]
   }
  ],
  "metadata": {
