--- a/delivery comida.ipynb
+++ b/delivery comida.ipynb
@@ -504,15 +504,15 @@
     }
    ],
    "source": [
-    "# simulate profitability with recommended discounts and commissions\n",
+    "# simular rentabilidad con el descuento y comisiones recomendados \n",
     "recommended_commission_percentage = 30.0  # 30%\n",
     "recommended_discount_percentage = 6.0    # 6%\n",
     "\n",
-    "# calculate the simulated commission fee and discount amount using recommended percentages\n",
+    "# calculo de la comision y descuento sugerido usando porcentajes sugeridos\n",
     "pedidos_comida['Simulated Commission Fee'] = pedidos_comida['Order Value'] * (recommended_commission_percentage / 100)\n",
     "pedidos_comida['Simulated Discount Amount'] = pedidos_comida['Order Value'] * (recommended_discount_percentage / 100)\n",
     "\n",
-    "# recalculate total costs and profit with simulated values\n",
+    "# recalculo del costo y ganacia con los valores simulados \n",
     "pedidos_comida['Simulated Total Costs'] = (pedidos_comida['Delivery Fee'] +\n",
     "                                        pedidos_comida['Payment Processing Fee'] +\n",
     "                                        pedidos_comida['Simulated Discount Amount'])\n",
@@ -520,15 +520,15 @@
     "pedidos_comida['Simulated Profit'] = (pedidos_comida['Simulated Commission Fee'] -\n",
     "                                   pedidos_comida['Simulated Total Costs'])\n",
     "\n",
-    "# visualizing the comparison\n",
+    "# visualizacion de la comparacion\n",
     "import seaborn as sns\n",
     "\n",
     "plt.figure(figsize=(14, 7))\n",
     "\n",
-    "# actual profitability\n",
+    "# rentabilidad actual\n",
     "sns.kdeplot(pedidos_comida['Profit'], label='Actual Profitability', fill=True, alpha=0.5, linewidth=2)\n",
     "\n",
-    "# simulated profitability\n",
+    "# rentabilidad simulada\n",
     "sns.kdeplot(pedidos_comida['Simulated Profit'], label='Estimated Profitability with Recommended Rates', fill=True, alpha=0.5, linewidth=2)\n",
     "\n",
     "plt.title('Comparison of Profitability in Food Delivery: Actual vs. Recommended Discounts and Commissions')\n",
